--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
     </script>
 </head>
 <body>
-    
+    <div class="left">
+        <img class="bg" src="/tetiana-shyshkina-pPKDBuynI6o-unsplash.jpg">
+        <div class="place-holder">
+            <img src="/odin-lined.png">
+            <h1>ODIN</h1>
+        </div>
+        <p>Photo by Tetiana SHYSHKINA on Unsplash</p>
+    </div>
+
+
+    <div class="right">
+        <section class="sec s1">
+            <p class="firstp">This is not a real online service! Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, asperiores! Quidem praesentium, accusantium explicabo, repellat magni deleniti, incidunt modi ipsa vel voluptate dignissimos vitae esse maiores expedita! Error, cumque impedit.
+            </p>
+            <p class="secondp">You know you want to.</p>
+        </section>
+        <section class="sec s2"></section>
+        <section class="sec s3"></section>
+    </div>
 </body>
 </html>
