--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="/odin-lined.png">
             <h1>ODIN</h1>
         </div>
-        <p>Photo by Tetiana SHYSHKINA on Unsplash</p>
+        <p>Photo by Tetiana Shyshkina on Unsplash</p>
     </div>
 
 
@@ -26,7 +26,58 @@
             </p>
             <p class="secondp">You know you want to.</p>
         </section>
-        <section class="sec s2"></section>
+
+        <section class="sec s2">
+            <p>Let's do this!</p>
+            <div class="form-wrapper">
+
+                <div class="col col1">
+                    
+                    <div class="firstName">
+                        <label for="firstName">FIRST NAME</label>
+                        <br>
+                        <input type="text" id="firstName" name="firstName">
+                        <br>
+                    </div>
+
+                    <div class="email">
+                        <label for="email">EMAIL</label>
+                        <br>
+                        <input type="email" id="email" name="email">
+                        <br>
+                    </div>
+
+                    <div class="password">
+                        <label for="password">PASSWORD</label>
+                        <br>
+                        <input type="password" id="password" name="password">
+                    </div>
+                </div>
+
+
+                <div class="col col2">
+                    <div class="lastname">
+                        <label for="lastName">LAST NAME</label>
+                        <br>
+                        <input type="text" id="lasttName" name="lastName">
+                        <br>
+                    </div>
+                    <div class="phone">
+                        <label for="phone">PHONE NUMBER</label>
+                        <br>
+                        <input type="tel" id="phone" name="phone">
+                        <br>
+                    </div>
+                    <div class="confirmPassword">
+                        <label for="confirmPassword">CONFIRM PASSWORD</label>
+                        <br>
+                        <input type="password" id="confirmPassword" name="confirmPassword">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         <section class="sec s3"></section>
     </div>
 </body>
